lintian (2.4.0) UNRELEASED; urgency=low

  * checks/binaries:
    + [ADB] Use Lintian::Check::check_spelling()
  * checks/changelog-file:
    + [ADB] Use Lintian::Check::check_spelling()
  * checks/changes-file{,.desc}:
    + [ADB] New check script for .changes file tests
    + [RA] Add maverick as a valid Ubuntu distribution.
  * checks/copyright-file:
    + [ADB] Use Lintian::Check::check_spelling()
  * checks/deb-format.desc:
    + [RG] deb-format needs changelog-file.
  * checks/debian-readme:
    + [ADB] Use Lintian::Check::check_spelling()
  * checks/debian-source-dir.desc:
    + [RA] Downgrade missing-debian-source-format to wishlist and tone
      down the long description a bit.
  * checks/description:
    + [ADB] Use Lintian::Check::check_spelling{,_picky}()
  * checks/fields:
    + [RA] Add an exception for diffutils for depending on an essential
      package without a version, since diff was renamed to diffutils and
      depending on diffutils effectively is a versioned dependency.
      Thanks, Santiago Vila.  (Closes: #575073)
  * checks/files:
    + [RA] The simplepie class can begin with class[.-].  Patch from
      Marcelo Jorge Vieira (metal).  (Closes: #575879)
  * checks/init.d:
    + [RA] Allow $all to satisfy a $remote_fs or $local_fs requirement for
      Required-Stop, since this has now been implemented.  Thanks, Michael
      Meskes.
    + [RA] Recognize negated file checks when checking for file sourcing
      without a test.  Thanks, Jérémie Corbier.  (Closes: #575363)
    + [ADB] Use == for numeric comparison.
  * checks/lintian.desc:
    + [ADB] Remove information about .changes-related tags, now included in
      checks/changes-file.desc
  * checks/manpages:
    + [ADB] Replace Spelling::spelling_check() call with the new
      Lintian::Check::check_spelling()
  * checks/menus:
    + [ADB] Use Lintian::Check::check_spelling{,_picky}()
  * checks/nmu:
    + [RA] Skip leading multi-author changelog lines when looking for