@@ -1,7 +1,8 @@
 lintian (2.4.0) UNRELEASED; urgency=low
 
-  * checks/binaries:
+  * checks/binaries{,.desc}:
     + [ADB] Use Lintian::Check::check_spelling()
+    + [RG] Detect embedded copies of libpng.
   * checks/changelog-file:
     + [ADB] Use Lintian::Check::check_spelling()
   * checks/changes-file{,.desc}:
